# grokspeechrec

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
src/: __init__.py
src/runapp/: app.py
src/speechrec/: __init__.py  app.py
src/tmlc_testapp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
