[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "tmlc-testapp"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "JAI MATA DI"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/visalakshi2001/tmlc-pypi"
"Bug Tracker" = "https://github.com/visalakshi2001/tmlc-pypi/issues"